--- a/server/src/main/resources/public/index.html
+++ b/server/src/main/resources/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kzen Launcher</title>
+    <title>Auto Launcher</title>
     <meta charset="UTF-8">
+
+    <script type="text/javascript" src="vendor.bundle.js" async></script>
+    <script type="text/javascript" src="main.bundle.js" async></script>
 </head>
 <body>
-    <script type="text/javascript" src="vendor.bundle.js"></script>
-    <script type="text/javascript" src="main.bundle.js"></script>
+    <div id="root"></div>
 </body>
 </html>
