--- a/kzen-auto-jvm/src/main/resources/public/index.html
+++ b/kzen-auto-jvm/src/main/resources/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Auto Auto</title>
+    <title>Kzen Auto</title>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" type="text/css" href="style.css">
