--- a/kzen-auto-jvm/src/main/resources/public/index.html
+++ b/kzen-auto-jvm/src/main/resources/public/index.html
@@ -4,7 +4,7 @@
     <title>Kzen Auto</title>
     <meta charset="UTF-8">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.js" ></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.js" ></script>-->
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
