--- a/kzen-auto-jvm/src/main/resources/public/index.html
+++ b/kzen-auto-jvm/src/main/resources/public/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="vendor.bundle.js"></script>
     <script type="text/javascript" src="main.bundle.js"></script>
 </head>
-<body>
+<body style="background-color: rgb(225, 225, 225)">
     <div id="root"></div>
 </body>
 </html>
