run controls work in FAB, improved colours

--- a/kzen-auto-jvm/src/main/resources/public/index.html
+++ b/kzen-auto-jvm/src/main/resources/public/index.html
@@ -12,7 +12,8 @@
     <script type="text/javascript" src="vendor.bundle.js"></script>
     <script type="text/javascript" src="main.bundle.js"></script>
 </head>
-<body style="background-color: rgb(240, 240, 240)">
+<body style="background-color: rgb(225, 225, 225)">
+        <!-- rgb(240, 240, 240) -->
         <!-- rgb(230, 230, 230) -->
         <!-- background-color: rgb(250, 250, 250) -->
         <!-- style="background-color: rgb(225, 225, 225)" -->
