added cropperjs with CropperWrapper for FeatureController, added Document title, refactoring

--- a/kzen-auto-jvm/src/main/resources/public/index.html
+++ b/kzen-auto-jvm/src/main/resources/public/index.html
@@ -9,14 +9,13 @@
 
     <link rel="stylesheet" type="text/css" href="normalize.css">
 
+    <!-- see: https://www.npmjs.com/package/react-cropper#installation -->
+    <link rel="stylesheet" type="text/css" href="cropper.css">
+
     <script type="text/javascript" src="vendor.bundle.js"></script>
     <script type="text/javascript" src="main.bundle.js"></script>
 </head>
 <body style="background-color: rgb(225, 225, 225)">
-        <!-- rgb(240, 240, 240) -->
-        <!-- rgb(230, 230, 230) -->
-        <!-- background-color: rgb(250, 250, 250) -->
-        <!-- style="background-color: rgb(225, 225, 225)" -->
     <div id="root">
         <div class="fade-in" style="width: 100%; height: 100%">
             <div style="width:100px; height:100px; position:absolute; left:0; right:0; top:0; bottom:0; margin:auto;">
