conditional outgoing arrow progress

--- a/kzen-auto-jvm/src/main/resources/public/index.html
+++ b/kzen-auto-jvm/src/main/resources/public/index.html
@@ -24,6 +24,10 @@
                     <div style="width: 50%; margin: 0 auto">
                         <div class="rootLoader"></div>
                     </div>
+                    <div>
+                        <img src="logo.png" height="128"/>
+<!--                        Kzen-->
+                    </div>
                 </div>
             </div>
         </div>
