--- a/kzen-auto-jvm/src/main/resources/public/index.html
+++ b/kzen-auto-jvm/src/main/resources/public/index.html
@@ -19,14 +19,15 @@
     <div id="root">
         <div class="fade-in" style="width: 100%; height: 100%">
             <div style="width:100px; height:100px; position:absolute; left:0; right:0; top:0; bottom:0; margin:auto;">
+                <div>
+                    <img src="logo.png" height="100" style="margin: 0 auto"/>
+                </div>
+
                 <div style="width: 50%; margin: 0 auto;">
                     Loading...
+
                     <div style="width: 50%; margin: 0 auto">
                         <div class="rootLoader"></div>
-                    </div>
-                    <div>
-                        <img src="logo.png" height="128"/>
-<!--                        Kzen-->
                     </div>
                 </div>
             </div>
