fixed state display, fixed multiple loops, fixed script rename while running, fixed resetExecution REST, fixed DivisibleCheck divisor type, dependency update

--- a/kzen-auto-jvm/src/main/resources/public/index.html
+++ b/kzen-auto-jvm/src/main/resources/public/index.html
@@ -15,6 +15,7 @@
 <!--    <script type="text/javascript" src="vendor.bundle.js"></script>-->
 <!--    <script type="text/javascript" src="main.bundle.js"></script>-->
     <script type="text/javascript" src="kzen-auto-js.js"></script>
+<!--    <script type="text/javascript" src="index.js"></script>-->
 </head>
 <body style="background-color: rgb(225, 225, 225)">
     <div id="root">
