indexing and filtering task happy path works

--- a/kzen-auto-jvm/src/main/resources/public/index.html
+++ b/kzen-auto-jvm/src/main/resources/public/index.html
@@ -16,6 +16,11 @@
 <!--    <script type="text/javascript" src="main.bundle.js"></script>-->
     <script type="text/javascript" src="kzen-auto-js.js"></script>
 <!--    <script type="text/javascript" src="index.js"></script>-->
+
+    <!-- https://blog.jetbrains.com/kotlin/2020/06/kotlin-1-4-m2-released/ -->
+    <!-- js.browser.webpackTask.outputFileName -->
+    <!-- js.moduleName -->
+
 </head>
 <body style="background-color: rgb(225, 225, 225)">
     <div id="root">
