--- a/kzen-auto-jvm/src/main/resources/public/index.html
+++ b/kzen-auto-jvm/src/main/resources/public/index.html
@@ -14,7 +14,7 @@
 
 <!--    <script type="text/javascript" src="vendor.bundle.js"></script>-->
 <!--    <script type="text/javascript" src="main.bundle.js"></script>-->
-    <script type="text/javascript" src="kzen-auto-js.js"></script>
+    <script defer type="text/javascript" src="kzen-auto-js.js"></script>
 <!--    <script type="text/javascript" src="index.js"></script>-->
 
     <!-- https://blog.jetbrains.com/kotlin/2020/06/kotlin-1-4-m2-released/ -->
