--- a/kzen-auto-jvm/src/main/resources/public/index.html
+++ b/kzen-auto-jvm/src/main/resources/public/index.html
@@ -25,15 +25,17 @@
 <body style="background-color: rgb(225, 225, 225)">
     <div id="root">
         <div class="fade-in" style="width: 100%; height: 100%">
-            <div style="width:100px; height:100px; position:absolute; left:0; right:0; top:0; bottom:0; margin:auto;">
+            <div style="width:100px; height:200px; position:absolute; left:0; right:0; top:0; bottom:0; margin:auto;">
                 <div>
                     <img src="logo.png" height="100" style="margin: 0 auto"/>
                 </div>
 
-                <div style="width: 50%; margin: 0 auto;">
-                    Loading...
+                <div style="width: 10em; margin: 0 auto;">
+                    <div style="margin-left: 0.9em">
+                        Loading...
+                    </div>
 
-                    <div style="width: 50%; margin: 0 auto">
+                    <div style="width: 58%; margin: 0 auto">
                         <div class="rootLoader"></div>
                     </div>
                 </div>
